--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/png" href="/webLogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ClickRide</title>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
 
 <body>
